@@ -13,4 +13,9 @@ improved performance and handling of error conditions. It runs on a variety
 of platforms (including as a replacement for DSH on AIX/PSSP), but is
 primarily developed on Linux.
 </longdescription>
+<use>
+  <flag name='rsh'>This allows the use of rsh (remote shell) and rcp
+    (remote copy) for authoring websites. sftp is a much more secure protocol
+    and is preferred.</flag>
+</use>
 </pkgmetadata>
